@@ -51,4 +51,4 @@ untracked_files = ignore
 
 [Prereqs]
 exact       = 1.14
-Config::App = 1.16
+Config::App = 1.17
